# histo_pmhc_benchmark

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
docs/: PLAN.md
skills/histo-pmhc-benchmark/: SKILL.md
src/histo_pmhc_benchmark/: __init__.py  cli.py  config.py  cutoff.py  dataset.py  figures.py  geometry.py  pipeline.py  stages.py
tests/: test_cutoff.py  test_pipeline.py
